--- a/CreativeWritersToolkitApp/Views/MainWindow.axaml
+++ b/CreativeWritersToolkitApp/Views/MainWindow.axaml
@@ -4,6 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		Width="600" Height="500"
+		MaxWidth="600" MaxHeight="520"
+		MinWidth="600" MinHeight="520"
+		WindowStartupLocation="CenterScreen"
+		WindowState="Normal"
         x:Class="CreativeWritersToolkitApp.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="CreativeWritersToolkitApp">
@@ -11,7 +16,115 @@
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
+	<DockPanel>
+		<Menu DockPanel.Dock="Top">
+			<MenuItem Header="_File">
+				<MenuItem Header="_Open..."/>
+				<Separator/>
+				<MenuItem Header="_Exit"/>
+			</MenuItem>
+			<MenuItem Header="_Edit">
+				<MenuItem Header="Copy"/>
+				<MenuItem Header="Paste"/>
+			</MenuItem>
+		</Menu>
+		<Grid DockPanel.Dock="Bottom">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="*"/>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"/>
+				<RowDefinition Height="*" MinHeight="400"/>
+			</Grid.RowDefinitions>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Border Background="Beige"
+					BorderBrush="Gray"
+					BorderThickness="1"
+					CornerRadius="2"
+					Margin="5"
+					Grid.Row="0"
+					Grid.Column="0"
+					Grid.ColumnSpan="2">
 
+				<Grid ColumnDefinitions="*"
+					  RowDefinitions="*,2*">
+					<TextBlock Text="Step 1 - Select Prompt" Grid.Row="0"/>
+					<StackPanel Orientation="Horizontal" Margin="4" Grid.Row="1">
+						<Button Content="Most Used Prompts" Margin="5">
+							<Button.Flyout>
+								<MenuFlyout Placement="BottomEdgeAlignedLeft">
+									<MenuItem Header="_Creative">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+									<MenuItem Header="_Rewriting">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+								</MenuFlyout>
+							</Button.Flyout>
+						</Button>
+						<Button Content="Favorite Prompts" Margin="5">
+							<Button.Flyout>
+								<MenuFlyout Placement="BottomEdgeAlignedLeft">
+									<MenuItem Header="_Creative">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+									<MenuItem Header="_Rewriting">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+								</MenuFlyout>
+							</Button.Flyout>
+						</Button>
+						<Button Content="Nonfiction Prompts" Margin="5">
+							<Button.Flyout>
+								<MenuFlyout Placement="BottomEdgeAlignedLeft">
+									<MenuItem Header="_Creative">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+									<MenuItem Header="_Rewriting">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+								</MenuFlyout>
+							</Button.Flyout>
+						</Button>
+						<Button Content="Fiction Prompts"
+								VerticalAlignment="Center">
+							<Button.Flyout>
+								<MenuFlyout Placement="BottomEdgeAlignedLeft">
+									<MenuItem Header="_Creative">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+									<MenuItem Header="_Rewriting">
+										<MenuItem Header="Content 1"/>
+										<MenuItem Header="Content 2"/>
+									</MenuItem>
+								</MenuFlyout>
+							</Button.Flyout>
+						</Button>
+					</StackPanel>
+				</Grid>
+				
+			</Border>
+			
+			<StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1">
+				<TextBox Margin="5,5" Height="340" Text="Step 2 - Edit Prompt Here"/>
+				<Button Grid.Column="0" 
+						Grid.Row="1" 
+						Margin="5,5,1,0" 
+						VerticalAlignment="Center"			
+						HorizontalAlignment="Stretch"
+						HorizontalContentAlignment="Center">Step 3 - Run AFTER You Have Selected a Prompt</Button>
+			</StackPanel>
+
+			
+			<TextBox Margin="5,5" Grid.Column="1" Grid.Row="1" Text="AI Results Will Appear Here"/>
+		</Grid>
+	</DockPanel>
 </Window>
