--- a/CreativeWritersToolkitApp/Views/ApiKeyWindow.axaml
+++ b/CreativeWritersToolkitApp/Views/ApiKeyWindow.axaml
@@ -17,11 +17,12 @@
 			Step Two, grab your API key and paste it in the box below.
 		</TextBlock>
 		<Button Grid.Row="2" 
+				Click="GetAccount_Click"
 				Height="30" 
 				Margin="3,0,0,0" 
 				Background="White" 
 				Content="Step 1 - Click Here to Get An Account"/>
-		<Button Grid.Row="3"
+		<Button Grid.Row="3" Click="GetAPI_Click"
 				Height="30"
 				Margin="3,10,0,0"
 				Background="White"
